[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling==1.27.0",
]

[project]
name = "sml-user-docs"
version = "1.0.0"
authors = [ { name = "KP Labs" } ]
classifiers = [
    "Private :: KP Labs",

    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
description = "SML user documentation"
requires-python = ">=3.12"
dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "Sphinx==8.2.3",
    "sphinx-immaterial==0.13.3",
    "sphinx-autobuild==2024.10.3",
    "sphinx-lint==1.0.0",
    "vale==3.9.5.0",
    # Fork, as upstream is not maintained
    'pygments-bitbake @ git+https://github.com/avnet-embedded/pygments-bitbake.git@5b84cf596d8bafb6ce4d36171518116712a6fc20',
]

[tool.hatch.build.targets.wheel]
packages  = ["extensions/sml_docs"]

[tool.hatch.envs.dev]
python = "3.12"
features = [ "dev" ]

[tool.hatch.envs.dev.scripts]
build = "sphinx-build -b html --jobs auto -n -d build/.doctrees {args:} src/ build/html"
watch = "sphinx-autobuild -b html -n -a -d build/.doctrees {args:} src/ build/html"
run-sphinx-lint = "sphinx-lint src/ {args:}"
run-vale = [
    "vale sync",
    "vale src/ {args:}",
]
check = [
    "run-sphinx-lint",
    "run-vale",
]
